--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@tailwindcss/vite": "^4.1.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "esbuild-plugin-react-virtualized": "^1.0.4",
+    "lorem-ipsum": "^2.0.8",
+    "react-virtualized": "^9.22.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
